k8s-manifests/applications/jenkins/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2025-03-20T17:39:09Z"
    generation: 1
    name: jenkins
    namespace: jenkins
    resourceVersion: "93538"
    uid: 5796ebf8-2caf-4504-941a-e3e2b413dbdd
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: jenkins
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: jenkins
      spec:
        containers:
        - image: jenkins/jenkins:lts
          imagePullPolicy: IfNotPresent
          name: jenkins
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/jenkins_home
            name: jenkins-home
          - mountPath: /var/jenkins_home/init.groovy.d/
            name: jenkins-init-scripts
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: jenkins-home
        - configMap:
            defaultMode: 420
            name: jenkins-init-scripts
          name: jenkins-init-scripts
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-03-20T17:39:16Z"
      lastUpdateTime: "2025-03-20T17:39:16Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-03-20T17:39:09Z"
      lastUpdateTime: "2025-03-20T17:39:16Z"
      message: ReplicaSet "jenkins-697fff4b78" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
